@@ -298,6 +298,9 @@ set_research_slots = 5
 		SP_arty_1 = 1
 		SP_arty_2 = 1 #M109L52
 
+		Arty_upgrade_1 = 1
+		Arty_upgrade_3 = 1
+
 		night_vision_1 = 1
 		night_vision_2 = 1
 		night_vision_3 = 1
