@@ -144,14 +144,14 @@
  AZE_social_reforms_desc: "Set of social project aimed at making our state more stable had been formed, now we need to implement them"
  AZE_aze_russia_deal: "Russia Deal"
  AZE_aze_russia_deal_desc: "Russian deal shall keep us fed with conracts and money"
- AZE_gaz_russia_deal: "Gaz Russia Deal"
- AZE_gaz_russia_deal_desc: "Gaz from Russia can help us solve our power issues"
+ AZE_gaz_russia_deal: "Gas Russia Deal"
+ AZE_gaz_russia_deal_desc: "Gas from Russia can help us solve our power issues"
  AZE_milit_presence: "Military Presence"
  AZE_milit_presence_desc: "Russian troops stationed in our state can deter Armenia and Iran from dong anything drastic"
  AZE_aze_iran_dealw: "Iran Deal"
  AZE_aze_iran_dealw_desc: "Deal with Iran is something a bit strange looking back at our tensions, but it can help us to solidify our position"
- AZE_gaz_iran_deal: "Gaz Iran Deal"
- AZE_gaz_iran_deal_desc: "Gaz from Iran can help us solve our power issues"
+ AZE_gaz_iran_deal: "Gas Iran Deal"
+ AZE_gaz_iran_deal_desc: "Gas from Iran can help us solve our power issues"
  AZE_iranian_afv: "Iranian AFV"
  AZE_iranian_afv_desc: "Iran has pretty powerful AFV production, we can join them to produce better equipment"
  AZE_arms_deals: "Arms Deals"
