@@ -19,10 +19,11 @@ Bugfixes:
  - Fixed spamming remove idea Army of Yes-Men
  - Fixed Foreign Data Kraken and Asylum Shopping ideas from game start if game rule disable EU is activated
  - Fixed events about Donbas (was missed Luhansk state in uprising and return Donbas in Ukraine)
+ - Netherlands now also have Multiple Rounds Simultaneous Impact and Varied Propellant Charges technologies
 
 Localisation:
  - Spanish localization improvements for the tree
- - Fixed spelling/grammar for USA focus and for Azerbaijani focus
+ - Fixed spelling/grammar for USA, Azerbaijan and Italy focus tree
  - Fixed localisation for event Quebec Supports the Government
  - Fixed localisation for Battleship technology
  - Fixed missing title for module category about engines in naval designer
